feat: NarakaSword